# nottoto

./: README.md
backend/: .gitignore  README.md  bun.lockb  mix.exs  package.json  router.js  server.js
backend/config/: config.exs  dev.exs  runtime.exs  test.exs
backend/controllers/: auth.controller.js  notes.controller.js
backend/db/: db.js  migrations.sql  schemas.js
backend/db/queries/: notes.js  users.js
backend/lib/: nottoto.ex  nottoto_web.ex
backend/lib/nottoto/: application.ex  note.ex  notes.ex  repo.ex
backend/lib/nottoto_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
backend/lib/nottoto_web/controllers/: default_controller.ex  error_json.ex  notes_controller.ex
backend/priv/repo/: seeds.exs
backend/priv/repo/migrations/: 20231220120225_create_notes.exs
backend/test/: test_helper.exs
backend/test/nottoto_web/controllers/: error_json_test.exs
backend/test/support/: conn_case.ex  data_case.ex
backend/utils/: getUserId.js
frontend/: Cargo.toml
frontend/src/: args.rs  auth.rs  cli.rs  main.rs  requests.rs  utils.rs
