[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.9.0"
thiserror = "1.0.51"
tokio = { version = "1", features = ["full"] }

